--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
             height: 200px;
             background: red;
         }
+        div:hover{
+            transition: 1s;
+            height: 400px;
+            background: green;
+        }
     </style>
 </head>
 <body>
